# shortcut

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  commandStore.ts  eventBridge.ts  executor.ts  index.css  keyboardHook.ts  tauriCommands.ts  types.ts
src-tauri/: Cargo.toml  cmd.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ActivityFeed.css  ActivityFeed.tsx  CommandEditor.css  CommandEditor.tsx  CommandList.css  CommandList.tsx  GroupManager.css  GroupManager.tsx  GroupedCommandList.css  GroupedCommandList.tsx  NotificationToast.css  NotificationToast.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx
src/fonts/: fonts.css
src/styles/: base.css  common.css
