[package]
name = "shortcut"
version = "0.1.0"
description = "shortcut"
authors = ["you"]
edition = "2021"

[lib]
name = "shortcut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-global-shortcut = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
enigo = "0.2"
arboard = "3.3"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
log = "0.4"
env_logger = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.bundle]
identifier = "com.shortcut.dev"
